# blog_code

./: .gitignore  CMakeLists.txt  README.md
doc/2/: README.md
doc/4/: README.md
doc/4/portainer/: docker-compose.yml
doc/5/: README.md
doc/5/docker_cross_demo/: .gitignore  CMakeLists.txt  docker-compose.yml  main.cpp
doc/5/docker_cross_demo/cmake/: .gitignore  CrossARM.docker.cmake
doc/5/docker_cross_demo/docker/: build.sh
src/1.closure/: README.md  main.js  main.lua  main.py  main2.js  main2.lua  main2_1.cpp  main2_2.cpp  main2_3.cpp  main2_4.cpp  main2_5.cpp  main_c11.cpp  main_c98.cpp
src/3.init_capture/: README.md  main_c14.cpp
